--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -16,6 +16,16 @@ block content
 			div.section-heading
 					h1.section-heading-title Nejnovější veřejná videa
 
+			.video
+				a(href="").video-src
+					.video-image
+						img(src="images/way.jpg").video-image-img
+						.video-overlay
+						.video-button
+							i(aria-hidden="true").fa.fa-play
+
+				p.video-text NEW YEAR: New York, USA to Stockholm, Sweden for only $273 roudtrip
+
 
 
 
