--- a/src/templates/video-step2.pug
+++ b/src/templates/video-step2.pug
@@ -43,11 +43,88 @@ block sectionOuterContent
         .steps-music
             h2.steps-title Zvolit hudbu
 
-            .steps-music-item
-                .steps-music-item-icon
-                    i(aria-hidden="true").fa.fa-music
+            .steps-music-items
+                label.steps-music-item
+                    .steps-music-item-wrap
+                        .steps-music-item-icon
+                            i(aria-hidden="true").fa.fa-volume-off
+                        p.steps-music-item-text No sound
 
-                p.steps-music-item-text No sound
+                    .steps-music-item-wrap
+                        input(type="checkbox" name="checkbox" value="on").steps-music-item-input
+                        .steps-music-item-checkbox
+
+                label.steps-music-item
+                    .steps-music-item-wrap
+                        .steps-music-item-icon
+                            i(aria-hidden="true").fa.fa-music
+                        p.steps-music-item-text My music
+
+                    .steps-music-item-wrap
+                        .steps-music-item-play
+                            i(aria-hidden="true").fa.fa-play
+                        input(type="checkbox" name="checkbox" value="on").steps-music-item-input
+                        .steps-music-item-checkbox
+
+                label.steps-music-item
+                    .steps-music-item-wrap
+                        .steps-music-item-icon
+                            i(aria-hidden="true").fa.fa-music
+                        p.steps-music-item-text Bach
+
+                    .steps-music-item-wrap
+                        .steps-music-item-play
+                            i(aria-hidden="true").fa.fa-play
+                        input(type="checkbox" name="checkbox" value="on").steps-music-item-input
+                        .steps-music-item-checkbox
+
+                label.steps-music-item
+                    .steps-music-item-wrap
+                        .steps-music-item-icon
+                            i(aria-hidden="true").fa.fa-music
+                        p.steps-music-item-text Pop
+
+                    .steps-music-item-wrap
+                        .steps-music-item-play
+                            i(aria-hidden="true").fa.fa-play
+                        input(type="checkbox" name="checkbox" value="on").steps-music-item-input
+                        .steps-music-item-checkbox
+
+                label.steps-music-item
+                    .steps-music-item-wrap
+                        .steps-music-item-icon
+                            i(aria-hidden="true").fa.fa-music
+                        p.steps-music-item-text Classic
+
+                    .steps-music-item-wrap
+                        .steps-music-item-play
+                            i(aria-hidden="true").fa.fa-play
+                        input(type="checkbox" name="checkbox" value="on").steps-music-item-input
+                        .steps-music-item-checkbox
+
+                label.steps-music-item
+                    .steps-music-item-wrap
+                        .steps-music-item-icon
+                            i(aria-hidden="true").fa.fa-music
+                        p.steps-music-item-text Got
+
+                    .steps-music-item-wrap
+                        .steps-music-item-play
+                            i(aria-hidden="true").fa.fa-play
+                        input(type="checkbox" name="checkbox" value="on").steps-music-item-input
+                        .steps-music-item-checkbox
+
+                label.steps-music-item
+                    .steps-music-item-wrap
+                        .steps-music-item-icon
+                            i(aria-hidden="true").fa.fa-music
+                        p.steps-music-item-text Lil Peep
+
+                    .steps-music-item-wrap
+                        .steps-music-item-play
+                            i(aria-hidden="true").fa.fa-play
+                        input(type="checkbox" name="checkbox" value="on").steps-music-item-input
+                        .steps-music-item-checkbox
 
 
     .steps-finishbox
