--- a/src/styles/parts/steps.sass
+++ b/src/styles/parts/steps.sass
@@ -305,16 +305,59 @@
       margin-left: 10px
       border-radius: 3px
 
+    &-items
+      margin: 10px 0 20px
+      max-height: 300px
+      overflow-y: auto
+
     &-item
-      +flex(flex-start, center)
-      margin-top: 5px
-      margin-left: 10px
-      font-size: 40px
+      +flex(space-between, center)
+      margin: 0 10px
+      padding: 5px 20px 5px 0
+      font-size: 34px
+      border-bottom: 1px solid grey
+
+      &-wrap
+        +flex(center, center)
+
+      &-icon
+        display: block
+        text-align: center
+        width: 30px
+
+      &-input
+        +absolute
+        left: -9000000px
+
+        &:checked + .steps-music-item-checkbox::before
+          opacity: 1
 
       &-text
         margin: 0
         margin-left: 20px
-        font-size: 15px
+        font-size: 18px
+        font-weight: 400
+
+      &-play
+        margin-left: 20px
+        cursor: pointer
+
+      &-checkbox
+        +flex(center, center)
+        +size(30px)
+        border: 1px solid grey
+        border-radius: 50%
+        cursor: pointer
+        margin-left: 20px
+
+        &::before
+          content: ""
+          opacity: 0
+          +size(20px)
+          border-radius: 50%
+          background-color: grey
+          transition: 200ms
+
 
   &-transparent
     margin-bottom: 10px
