--- a/src/styles/parts/video.sass
+++ b/src/styles/parts/video.sass
@@ -1,8 +1,31 @@
 .video
-  padding: 10px 20px
+  padding: 10px 0
   border-bottom: 1px solid #f1f1f1
   background-color: #fff
   &-src
-   +size(100% auto)
+   +sizes(100%, auto)
   &-text
-    font-size: 18px
+    font-size: 21px
+    margin-top: 10px
+  &-image
+    position: relative
+    min-width: 100%
+
+    &-img
+      min-width: 100%
+
+  &-overlay
+    +absolute(0)
+    +size(100%)
+    background-color: rgba(#000, .5)
+
+  &-button
+    +absolute(50% null null 50%)
+    +size(70px)
+    +flex(center, center)
+    font-size: 33px
+    padding-left: 6px
+    color: #fff
+    transform: translate(-50%, -50%)
+    border: 3px solid #fff
+    border-radius: 50%
